force-app/main/default/objects/Timeline__c/Timeline__c.object-meta.xml
<CustomObject>
    <description>Built for timeline.js</description>
    <label>Timeline</label>
    <nameField>
        <displayFormat>TL-{0000}</displayFormat>
        <label>Timeline ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timelines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>