force-app/main/default/objects/Timeline__c/fields/Background_URL__c.field-meta.xml
<CustomField>
    <fullName>Background_URL__c</fullName>
    <label>Background URL</label>
    <type>Url</type>
</CustomField>