force-app/main/default/objects/Timeline__c/fields/Display_URL__c.field-meta.xml
<CustomField>
    <fullName>Display_URL__c</fullName>
    <formula>HYPERLINK(
  IF(
      CONTAINS($Api.Partner_Server_URL_260, 'visual'), 
      'https://'+
      MID($Api.Partner_Server_URL_260, FIND( 'visual', $Api.Partner_Server_URL_260)-4,4)
      +'salesforce.com/',
      LEFT($Api.Partner_Server_URL_260, FIND( '/services', $Api.Partner_Server_URL_260))
  ) + "apex/TimelineDisplay?id=" +  Id, IF(
      CONTAINS($Api.Partner_Server_URL_260, 'visual'), 
      'https://'+
      MID($Api.Partner_Server_URL_260, FIND( 'visual', $Api.Partner_Server_URL_260)-4,4)
      +'salesforce.com/',
      LEFT($Api.Partner_Server_URL_260, FIND( '/services', $Api.Partner_Server_URL_260))
  ))</formula>
    <label>Display URL</label>
    <type>Text</type>
</CustomField>